<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
	<string name="app_name" translatable="false">AirMessage</string>
	<string name="prefix_you">You: %s</string>
	<string name="prefix_draft">Draft: %s</string>
	<string name="prefix_wild">%1$s : %2$s</string>
	<string name="action_send">Send</string>
	<string name="action_next">Next</string>
	<string name="action_continue">Continue</string>
	<string name="action_done">Done</string>
	<string name="action_back">Back</string>
	<string name="action_skip">Skip</string>
	<string name="action_delete">Delete</string>
	<string name="action_deletemessage">Remove message</string>
	<string name="action_reply">Reply</string>
	<string name="action_markread">Mark as read</string>
	<string name="action_retry">Retry</string>
	<string name="action_search">Search</string>
	<string name="action_markallread">Mark all as read</string>
	<string name="action_update">Update</string>
	<string name="action_dismiss">Dismiss</string>
	<string name="action_close">Close</string>
	<string name="action_undo">Undo</string>
	<string name="action_replay">Replay</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_resolve">Resolve</string>
	<string name="action_sync">Sync</string>
	<string name="action_resync">Resync</string>
	<string name="action_advanced">Advanced</string>
	<string name="action_enable">Enable</string>
	<string name="action_remove">Remove</string>
	<string name="action_unblock">Unblock</string>
	<string name="action_reconfigure">Reconfigure</string>
	<string name="action_copy">Copy</string>
	<string name="action_copytext">Copy text</string>
	<string name="action_share">Share</string>
	<string name="action_save">Save</string>
	<string name="action_deletedata">Delete file</string>
	<string name="action_archive">Archive</string>
	<string name="action_unarchive">Unarchive</string>
	<string name="action_mute">Mute</string>
	<string name="action_unmute">Unmute</string>
	<string name="action_details">Details</string>
	<string name="action_viewdetails">View details</string>
	<string name="action_disconnect">Disconnect</string>
	<string name="action_reconnect">Reconnect</string>
	<string name="action_quit">Quit</string>
	<string name="action_sendfeedback">Send feedback</string>
	<string name="action_downloadmessages">Download messages</string>
	<string name="action_deletemessages">Delete messages</string>
	<string name="action_sharemessage">Share message</string>
	<string name="action_addcontent">Add content</string>
	<string name="action_takephoto">Take photo</string>
	<string name="action_recordvideo">Record video</string>
	<string name="action_choosephoto">Choose photo</string>
	<string name="action_choosefile">Choose file</string>
	<string name="action_recordaudio">Record audio</string>
	<string name="action_draw">Draw</string>
	<string name="action_addtext">Add text</string>
	<string name="action_addaddress">Add address</string>
	<string name="action_sendto">Send to %s</string>
	<string name="action_editcontactcolor">Change contact color</string>
	<string name="action_editconversationcolor">Change conversation color</string>
	<string name="action_confirmparticipants">Confirm participants</string>
	<string name="action_getnotifications">Get notifications</string>
	<string name="action_mutenotifications">Mute notifications</string>
	<string name="action_pinconversation">Pin conversation</string>
	<string name="action_copytoclipboard">Copy to clipboard</string>
	<string name="action_savetofile">Save to file</string>
	<string name="action_relaunchapp">Relaunch app</string>
	<string name="action_newconversation">New conversation</string>
	<string name="action_connectiontroubleshootingguide">View help</string>
	<string name="action_tapbackdetails">View tapback details</string>
	<string name="action_renamegroup">Rename this group</string>
	<string name="action_updatepassword">Update server password</string>
	<string name="action_manualconfiguration">Use manual configuration</string>
	<string name="action_signin_google">Sign in with Google</string>
	<string name="action_signin_email">Sign in with email</string>
	<string name="action_signout">Sign out</string>
	<string name="action_switchtoaccount">Switch to account</string>
	<string name="action_checkconnection">Check connection</string>
	<string name="action_installupdate">Install update</string>
	<string name="action_updateapp">Update app</string>
	<string name="action_createlink">Create link</string>
	<string name="action_newfacetime">New FaceTime</string>
	<string name="action_answercall">Answer</string>
	<string name="action_declinecall">Decline</string>
	<string name="action_endcall">End call</string>
	<string name="action_sendcurrentlocation">Send my current location</string>
	<string name="action_showpassword">Show password</string>
	<string name="action_hidepassword">Hide password</string>
	<string name="action_enablelocation">Enable location</string>
	<string name="action_dontshowagain">Don\'t show again</string>
	<string name="action_helpthecause">Help the cause</string>
	<string name="action_short_picture">Photo</string>
	<string name="action_short_video">Video</string>
	<string name="screen_details">Details</string>
	<string name="screen_settings">Settings</string>
	<string name="screen_help">Help</string>
	<string name="screen_archived">Archived</string>
	<string name="screen_blockedcontacts">Blocked contacts</string>
	<string name="screen_newconversation">New conversation</string>
	<string name="screen_newfacetime">New FaceTime</string>
	<string name="screen_conversationdetails">Conversation details</string>
	<string name="screen_newmessage">New message</string>
	<string name="screen_manualconfiguration">Manual configuration</string>
	<string name="screen_licenses">Open source licenses</string>
	<string name="screen_serverupdate">Server update</string>
	<string name="screen_helpandfeedback">Help and feedback</string>
	<string name="title_conversation_name">Group name</string>
	<string name="title_conversation_members">People in this conversation</string>
	<string name="title_conversation_files">Files in this conversation</string>
	<string name="dialog_feedback_message">Have a bug to report, a feature to suggest, or anything else to say? Contact us or discuss with others using the links below.</string>
	<string name="dialog_feedback_email">Send E-Mail</string>
	<string name="dialog_feedback_discord">Join Discord server</string>
	<string name="dialog_feedback_reddit">Open community subreddit</string>
	<string name="dialog_signout_message">Are you sure you want to sign out?</string>
	<string name="dialog_skipsetup_message">Skip setup?</string>
	<string name="message_blankstate_conversations">No conversations</string>
	<string name="message_blankstate_conversations_description">Once you start a new conversation, you\'ll see it listed here</string>
	<string name="message_blankstate_conversations_archived">No archived conversations</string>
	<string name="message_blankstate_conversations_archived_description">Archived conversations appear here</string>
	<string name="message_blankstate_conversations_basic">No conversations</string>
	<string name="message_blankstate_blocked">No blocked addresses</string>
	<string name="message_fileexport_success">File saved to device</string>
	<string name="message_fileexport_fail">Failed to save file</string>
	<string name="message_unknownerror">An unknown error occurred</string>
	<string name="message_loaderror_conversation">Failed to load conversation</string>
	<string name="message_loaderror_messages">Failed to load messages</string>
	<string name="message_loaderror_contacts">Failed to load contacts</string>
	<string name="message_loaderror_blocked">Failed to load blocked addresses</string>
	<string name="message_signinerror">Sign-in error</string>
	<string name="message_loaderror_gallery">Failed to load gallery images</string>
	<string name="message_loaderror_documents">Failed to load documents</string>
	<string name="message_loaderror_location">Failed to load your location</string>
	<string name="message_intenterror_open">Couldn\'t open file</string>
	<string name="message_intenterror_camera">No camera app found</string>
	<string name="message_intenterror_browser">No web browser app found</string>
	<string name="message_intenterror_email">No E-Mail app found</string>
	<string name="message_intenterror_contacts">No contacts app found</string>
	<string name="message_messageerror_title">Your message could not be sent</string>
	<string name="message_messageerror_desc_air_invalidcontent">The selected content is unavailable</string>
	<string name="message_messageerror_desc_air_filetoolarge">The selected content is too large to send</string>
	<string name="message_messageerror_desc_air_io">Couldn\'t process selected content</string>
	<string name="message_messageerror_desc_air_network">Couldn\'t connect to AirMessage server</string>
	<string name="message_messageerror_desc_air_external">An external error occurred</string>
	<string name="message_messageerror_desc_air_expired">Request timed out</string>
	<string name="message_messageerror_desc_air_references">An internal error occurred (references lost)</string>
	<string name="message_messageerror_desc_air_internal">An internal error occurred</string>
	<string name="message_messageerror_desc_air_badrequest">An error occurred while processing this message</string>
	<string name="message_messageerror_desc_air_unauthorized">AirMessage Server isn\'t allowed to send messages</string>
	<string name="message_messageerror_desc_air_noconversation">This conversation isn\'t available</string>
	<string name="message_messageerror_desc_air_serverexpired">This message couldn\'t be delivered properly</string>
	<string name="message_messageerror_desc_air_externalunknown">An unknown external error occurred</string>
	<string name="message_messageerror_desc_apple_network">Couldn\'t connect to iMessage server</string>
	<string name="message_messageerror_desc_apple_unregistered">%s is not registered with iMessage</string>
	<string name="message_messageerror_desc_apple_unregistered_generic">The recipient is not registered with iMessage</string>
	<string name="message_messageerror_details_title">Error details</string>
	<string name="message_messageerror_details_unavailable">No error details available</string>
	<string name="message_serverstatus_noconnection">No connection to server</string>
	<string name="message_setup_connect_address">Server address</string>
	<string name="message_setup_connect_fallbackaddress">Fallback address (optional)</string>
	<string name="message_setup_connect_connectionerror">Connection failed</string>
	<string name="message_setup_connect_password">Password</string>
	<string name="message_setup_sync_download_title">Download message history</string>
	<string name="message_setup_sync_download_description">You\'re now connected to <b>%s</b>.\n\nWould you like to copy your recent messages from your computer to this device?</string>
	<string name="message_setup_sync_delete_description">Alternatively, you can start fresh and simply clear away your old messages from this device.</string>
	<string name="message_connection_connected">Connected to server</string>
	<string name="progress_loading">Loading&#8230;</string>
	<string name="progress_sync">Getting your messages&#8230;</string>
	<string name="progress_connectionverification">Checking your connection&#8230;</string>
	<string name="imperative_selectconversation">Select conversation</string>
	<string name="placeholder_title" translatable="false">Title</string>
	<string name="placeholder_message" translatable="false">Message</string>
	<string name="placeholder_name" translatable="false">Name</string>
	<string name="placeholder_address" translatable="false">Address</string>
	<string name="placeholder_time" translatable="false">Time</string>
</resources>