<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ShareHandler">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="24dp"
		android:layout_marginRight="24dp"
		android:layout_marginTop="24dp"
		android:fontFamily="sans-serif-medium"
		android:text="@string/imperative_selectconversation"
		android:textColor="?android:attr/textColorPrimary"
		android:textSize="20sp" />
	
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray" />
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:minHeight="50dp">
		<!-- List view -->
		<ListView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:divider="@null"
			android:dividerHeight="0dp"
			android:minHeight="100dp"
			android:theme="@style/OverscrollNeutralizer"
			android:visibility="gone" />
		<!-- Loading text -->
		<TextView
			android:id="@+id/loading_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/progress_loading"
			android:textAlignment="center"
			android:textColor="?android:textColorSecondary"
			android:visibility="gone" />
		<!-- No conversations text -->
		<TextView
			android:id="@+id/no_conversations"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:alpha="0"
			android:text="@string/message_blankstate_conversations_basic"
			android:textAlignment="center"
			android:visibility="gone" />
		<!-- Sync view -->
		<LinearLayout
			android:id="@+id/syncview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical"
			android:visibility="gone">
			<!-- <ImageView
				android:id="@+id/syncview_icon"
				android:layout_width="96dp"
				android:layout_height="96dp"
				android:layout_gravity="center"
				android:scaleType="fitXY"
				android:src="@drawable/sync"
				android:tint="?android:attr/textColorSecondary" /> -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/progress_sync"
				android:tint="?android:attr/textColorSecondary" />
			
			<ProgressBar
				android:id="@+id/syncview_progress"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:progressBackgroundTint="@color/colorPrimary" />
		</LinearLayout>
		<!-- Error view -->
		<LinearLayout
			android:id="@+id/errorview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical"
			android:visibility="gone">
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/message_loaderror_messages"
				android:tint="?android:attr/textColorSecondary" />
			
			<Button
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/action_retry" />
		</LinearLayout>
		<!-- Connection view -->
		<LinearLayout
			android:id="@+id/serverwarning"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical"
			android:visibility="gone">
			
			<TextView
				android:id="@+id/serverwarning_message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="12dp"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:layout_marginTop="12dp"
				android:text="@string/message_serverstatus_noconnection"
				android:textAlignment="center"
				android:textColor="?android:attr/textColorSecondary" />
			
			<Button
				android:id="@+id/serverwarning_button"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/action_retry" />
		</LinearLayout>
	</RelativeLayout>
	
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray" />
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="52dp"
		android:layout_gravity="end"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		android:orientation="horizontal">
		
		<Button
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginEnd="8dp"
			android:minWidth="64dp"
			android:onClick="closeDialog"
			android:text="@android:string/cancel"
			android:textColor="@color/colorPrimary" />
		
		<Button
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:minWidth="64dp"
			android:onClick="createNewConversation"
			android:text="@string/screen_newmessage"
			android:textColor="@color/colorPrimary" />
	</LinearLayout>
</LinearLayout>