<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:paddingBottom="15dp"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
	android:paddingTop="15dp">
	<!-- Conversation Icon -->
	<RelativeLayout
		android:id="@+id/conversationicon"
		android:layout_width="@dimen/profile_size"
		android:layout_height="@dimen/profile_size">
		<!-- 1 user -->
		<ViewStub
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout="@layout/listitem_conversation_icon1" />
		<!-- 2 users -->
		<ViewStub
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout="@layout/listitem_conversation_icon2" />
		<!-- 3 users -->
		<ViewStub
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout="@layout/listitem_conversation_icon3" />
		<!-- 4 users -->
		<ViewStub
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout="@layout/listitem_conversation_icon4" />
		<!-- Selected Icon -->
		<RelativeLayout
			android:id="@+id/selected"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/circle"
			android:backgroundTint="@color/colorPrimary"
			android:visibility="gone">
			
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:src="@drawable/check" />
		</RelativeLayout>
	</RelativeLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginStart="10dp"
		android:orientation="horizontal">
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			
			<TextView
				android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="1"
				android:text="@string/placeholder_title"
				android:textColor="?android:attr/textColorPrimary"
				android:textSize="16sp" />
			
			<TextView
				android:id="@+id/message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:textSize="14sp"
				android:maxLines="1"
				android:text="@string/placeholder_message"
				android:textColor="?android:textColorSecondary" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			
			<ImageView
				android:id="@+id/muted_icon"
				android:layout_width="16dp"
				android:layout_height="16dp"
				android:layout_gravity="center"
				android:src="@drawable/notifications_off"
				android:tint="?android:textColorSecondary" />
			
			<TextView
				android:id="@+id/time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="6dp"
				android:ellipsize="end"
				android:maxLines="1"
				android:text="@string/placeholder_time"
				android:textColor="?android:textColorSecondary" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>